--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,7 +1,95 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
-    padding-top: 5rem;
+  padding-top: 5rem;
+  background-color: whitesmoke;
 }
 
 footer  {
-    padding-top: 20px;
+  padding-top: 20px;
+}
+
+.form {
+  margin-top: 30px;
+  border: 1px solid #ccc;
+  padding: 40px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 10px #d8d8d8;
+  background-color: white;
+}
+
+form {
+  color: #5a5a5a;
+}
+
+label {
+  font-weight: bold;
+  font-size: 1.15rem;
+}
+
+input[type="submit"] {
+  margin-top: 30px;
+}
+
+.navbar-brand, .logo-text {
+  font-family: 'Lobster', cursive;
+}
+
+.logo {
+  color: black;
+  margin-right: 10px;
+}
+
+#home-img, #home-card {
+  width: 450px;
+  height: 350px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-shadow: 0px 4px 10px #d8d8d8;
+  background-color: white;
+}
+
+#home-img {
+  background-image: url("../uploads/blur.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#home-card {
+  padding: 20px;
+}
+
+.home, .home-btns {
+  margin-top: 50px;
+}
+
+.homt-btns {
+  margin: auto;
+}
+
+.home-btns a {
+  width: 49%;
+}
+
+.logo-text {
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+#home-card p {
+  font-size: 1.1rem;
+}
+
+.home-login-btn, .post-btn {
+  float: right;
+}
+
+.post-btn {
+  width: 200px;
 }
