--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -6,6 +6,15 @@
   padding: 0px;
 }
 
+a {
+  color: inherit;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
 body {
   padding-top: 5rem;
   background-color: whitesmoke;
@@ -15,7 +24,7 @@ footer  {
   padding-top: 20px;
 }
 
-.form {
+.form, .post {
   margin-top: 30px;
   border: 1px solid #ccc;
   padding: 40px;
@@ -92,4 +101,118 @@ input[type="submit"] {
 
 .post-btn {
   width: 200px;
+  display: block;
+  margin-bottom: 30px;
+}
+
+.post {
+  clear: both;
+  padding: 0px;
+  color: #464646;
+}
+
+.post-header, .post-footer {
+  padding: 20px;
+  font-weight: bold;
+}
+
+.post-header img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.posted-img {
+  
+}
+
+.posted-img img, #modal-photo {
+  max-width: 100%;
+  margin: auto;
+}
+
+.caption, .post-footer {
+  padding: 15px;
+}
+
+.like-icon i {
+  font-weight: bold;
+  font-size: 1.25rem;
+  margin-right: 5px;
+}
+
+.profile-header {
+  padding: 25px;
+  color: #464646;
+  margin-bottom: 30px;
+}
+
+.profile-header img {
+  width: 110px;
+  height: 110px;
+  margin-right: 30px;
+}
+
+.profile-header p {
+  margin-bottom: 0px;
+}
+
+.num-posts {
+  margin-right: 40px;
+}
+
+.follow-btn {
+  clear: both;
+  color: white;
+  border-radius: 4px;
+  background-color: #008cff;
+  line-height: 40px;
+}
+
+.follow-btn:hover {
+  cursor: pointer;
+}
+
+.num-posts, .followers{
+  margin-bottom: 20px;
+}
+
+.profile-mid .p-name {
+  margin-bottom: 8px;
+}
+
+.profile-mid .p-bio {
+  margin-top: 8px;
+}
+
+.profile-right p {
+  font-size: 1.1rem;
+}
+
+.grid-wrapper {
+  display: grid;
+  grid-template-columns: 32% 32% 32%;
+  grid-gap: 20px;
+}
+
+.grid-item img {
+  max-width: 100%;
+  height: auto;
+  cursor: pointer;
+}
+
+.modal-body {
+  padding: 0px;
+}
+
+.modal-footer {
+  justify-content: space-between;
+}
+
+.modal-header .post-header {
+  padding: 0px;
+}
+
+.modal-content {
+  color: #464646;
 }
