--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
     <main>
         <div class="container">
             <!-- component matched by the route will render here -->
-            <router-view></router-view>
+            <router-view :key="$route.fullPath"></router-view>
         </div>
     </main>
 
